Fix path alignment

--- a/css/dexterity.css
+++ b/css/dexterity.css
@@ -12,7 +12,7 @@
     display: flex;
 }
 .cell {
-    flex: 1;
+    flex: 0;
     position: relative;
 }
 .cell-1 {
